# xenon_molecular_dynamics

./: .gitignore  1en13.txt  1en14.txt  CMakeLists.txt  Makefile  README.md  argparse.c  argparse.h  aux.c  aux.h  data.csv  hep_original.cpp  main.c  main.cpp  mol_c  mol_orig  new1en10.txt  new1en11.txt  new1en12.txt  new1en13  new1en13.txt  new1en14.txt  orig.out  original.cpp  original_data.csv  original_speeds.csv  process_avg.ipynb  rands.txt  rng.cpp  rng.h  speeds.csv  steptimegraph.xlsx  xenon_dynamics.ipynb  xenon_optimization_report.ipynb  xspeedtest.c
.ipynb_checkpoints/: process_avg-checkpoint.ipynb  xenon_analyze-checkpoint.ipynb  xenon_optimization_report-checkpoint.ipynb
data/: bogo1.csv  mean_spd.csv
data/core5_1en14_2en9/: timer1.txt  timer2.txt  timer3.txt  timer4.txt  timer5.txt
original_out/: .~lock.t14_10.csv#  t14_10.csv
temp/: 03.txt  workspace.xml
